// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> with a valid size matches its snapshot 1`] = `
<span
  className="y-text y-textSize-xLarge"
  style={Object {}}
>
  test content
</span>
`;

exports[`<Text /> with additional className matches its snapshot 1`] = `
<span
  className="y-text TEST_CLASSNAME"
  style={Object {}}
>
  test content
</span>
`;

exports[`<Text /> with bold matches its snapshot 1`] = `
<span
  className="y-text y-text__bold"
  style={Object {}}
>
  test content
</span>
`;

exports[`<Text /> with color secondary matches its snapshot 1`] = `
<span
  className="y-text y-text__color-secondary"
  style={Object {}}
>
  test content
</span>
`;

exports[`<Text /> with default options matches its snapshot 1`] = `
<span
  className="y-text"
  style={Object {}}
>
  test content
</span>
`;

exports[`<Text /> with maxWidth 500px matches its snapshot 1`] = `
<span
  className="y-text y-text__ellipsis"
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  test content
</span>
`;

exports[`<Text /> with screenreader text empty string matches its snapshot 1`] = `
<span
  className="y-text"
  style={Object {}}
>
  <span>
    <span
      aria-hidden={true}
    >
      test content
    </span>
    <ScreenreaderText />
  </span>
</span>
`;

exports[`<Text /> with screenreader text matches its snapshot 1`] = `
<span
  className="y-text"
  style={Object {}}
>
  <span>
    <span
      aria-hidden={true}
    >
      test content
    </span>
    <ScreenreaderText>
      SCREENREADER TEXT
    </ScreenreaderText>
  </span>
</span>
`;

exports[`<Text /> with uppercase matches its snapshot 1`] = `
<span
  className="y-text y-text__uppercase"
  style={Object {}}
>
  test content
</span>
`;
